# PipidastarPro

./: .pre-commit-config.yaml  AppTabs.py  Dockerfile  Makefile  README.md  main.py  people.db  pyproject.toml  pyvenv.cfg  server.py
Scripts/: activate  activate.bat  activate.fish  activate.xsh
bot/: __init__.py  main.py
bot/callbacks/: __init__.py  main.py  paginators.py
bot/database/json_data/: __init__.py  loader.py
bot/database/json_data/sources/: pages.json
bot/database/models/: __init__.py
bot/filters/: __init__.py  main.py
bot/handlers/: __init__.py  main.py  other.py
bot/handlers/admin/: __init__.py  main.py
bot/handlers/user/: __init__.py  main.py
bot/keyboards/: __init__.py  builders.py  fabrics.py  inlines.py  replies.py
bot/misc/: __init__.py  config.py  logs.py  types.py  utils.py
